...
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <constraints>
                                    <constraint firstAttribute="width" secondItem="SxW-E5-qKR" secondAttribute="height" multiplier="1:1" id="7Hz-Az-0Sy"/>
                                    <constraint firstAttribute="height" constant="66" id="FlW-z8-wg4"/>
                                </constraints>
                                <inset key="contentEdgeInsets" minX="11" minY="11" maxX="11" maxY="11"/>
                                <state key="normal" image="menu"/>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                        <integer key="value" value="33"/>
                                    </userDefinedRuntimeAttribute>
                                    <userDefinedRuntimeAttribute type="boolean" keyPath="layer.maskToBounds" value="YES"/>
                                </userDefinedRuntimeAttributes>
...
                                        </constraints>
                                    </view>
                                    <button opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Kv4-VE-XZ0">
                                        <rect key="frame" x="150" y="428" width="122" height="122"/>
                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <inset key="contentEdgeInsets" minX="33" minY="33" maxX="33" maxY="33"/>
                                        <state key="normal" image="checked"/>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                <integer key="value" value="47"/>
                                            </userDefinedRuntimeAttribute>
                                            <userDefinedRuntimeAttribute type="boolean" keyPath="layer.maskToBounds" value="YES"/>
                                        </userDefinedRuntimeAttributes>
...
